this is my second  commit

--- a/reg.html
+++ b/reg.html
@@ -7,6 +7,7 @@ Registration page
 <body>
 Name:<input type="text" placeholder="enter name"/>
 Email:<input type="email" />
+Phone:<input type="text"/>
 Password:<input type="password"/>
 <button>submit</button>
 </body>
